test: Optimize code